<resources>
    <string name="app_name">Cafe App</string>
    <string name="txtSlogan">Welcome!</string>
    <string name="SignUpButton">Зарегистрироваться</string>
    <string name="SignInButton">Войти</string>
    <string name="text_bottom">Войдите в свою учётную запись!</string>
    <string name="todo">TODO</string>
    <string name="phoneNumber">Телефон</string>
    <string name="EditPassword">Пароль</string>
    <string name="editName">Имя</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
