<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_phone"
            android:hint="@string/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:inputType="phone"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_password"
            android:hint="@string/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:background="@drawable/button_sign_in"
            android:text="@string/SignInButton"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            />

    </LinearLayout>

</RelativeLayout>